# forge

./: .gitignore  .golangci.yml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  README.md  buf.gen.yaml  go.mod  go.sum
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
api/proto/: common.proto  coordinator.proto  worker.proto  workflow.proto
bpf/: Makefile  tcp_latency.c
cmd/coordinator/: main.go
cmd/echo-plugin/: main.go
cmd/forge/: main.go
cmd/forgex/: main.go
cmd/worker/: main.go
conf/: agent.toml
configs/forgex/: cases.yaml  eval_rules.yaml  failure_taxonomy.yaml  stop_policies.yaml
deploy/: docker-compose.yml  prometheus.yml
deploy/kueue/: kueue-config.yaml
deploy/migrations/: 001_init.sql  003_rag.sql  004_checkpoint.sql  005_v2_scheduler.sql  006_v2_hitl.sql
docs/: coding-conventions.md  forge-v2-guide.md  implementation-plan.md  phase-prompts.md  tech-plan-phase-ae2-4.md  tech-spec.md
examples/cpp-worker/: CMakeLists.txt  README.md  main.cpp
examples/forgex/: task_packet_aihook_empty_images_refs.yaml  task_packet_generic_contract_success.yaml  task_packet_generic_contract_violation.yaml
examples/python-worker/: README.md  main.py
internal/agent/: agent.go  dag_gen.go  dag_gen_test.go  dag_validate.go  dag_validate_test.go  forge_client.go  parser.go  parser_test.go  planner.go  planner_test.go  session.go  session_test.go
internal/bus/: nats.go  nats_test.go  pg_notify.go  pg_notify_test.go
internal/cache/: nats_kv.go  nats_kv_test.go
internal/cdc/: cdc_test.go  interface.go  postgres.go  trigger.go  wal.go  wal_test.go
internal/coordinator/: cel.go  cel_test.go  coordinator.go  cron.go  cron_test.go  dag.go  dag_test.go  kueue.go  leader.go  leader_test.go  loop.go  loop_test.go  retry.go  retry_test.go  routing.go  routing_test.go  runtime_observer_test.go  scheduler.go  scheduler_hash.go  scheduler_hash_test.go  scheduler_least.go  scheduler_least_test.go  scheduler_test.go  scheduler_wrr.go  scheduler_wrr_test.go  timeout.go  timeout_test.go  timingwheel.go  worker_manager.go  worker_manager_test.go
internal/discovery/: etcd.go  etcd_test.go  interface.go  interface_test.go
internal/event/: replay_test.go  store.go
internal/hitl/: callback.go  handler.go  integration_test.go  manager.go  manager_test.go  message_format.go  openclaw_callback.go  workflow_api.go
internal/observability/: ebpf.go  ebpf_stub.go  logger.go  logger_test.go  metrics.go  observability_test.go  profiling.go  tracing.go
internal/registry/: compiler.go  parser.go  registry.go  registry_test.go  schema.go  template.go  watcher.go
internal/saga/: compensator.go  compensator_test.go
internal/scheduler/: dedup.go  feishu_poll.go  scheduler.go  scheduler_test.go  trigger.go
internal/storage/: boltdb.go  boltdb_test.go  interface.go  postgres.go
internal/wasm/: executor.go  registry.go  runtime.go  runtime_test.go  wasm_test.go
internal/worker/: executor.go  gate.go  (+7 more)
projects/: avp_eds.yaml
scripts/: lint_structure.go
sdk/cpp/: CMakeLists.txt  vcpkg.json
sdk/cpp/include/forge/: task_context.h  task_handler.h  tracing.h  worker.h
sdk/cpp/src/: grpc_client.cpp  grpc_client.h  worker.cpp
sdk/python/: README.md  pyproject.toml
sdk/python/forge_sdk/: __init__.py  decorators.py  tracing.py  worker.py
sdk/python/tests/: test_decorators.py  test_worker.py
test/: agent_e2e_test.go  agent_worker_test.go  cdc_integration_test.go  integration_test.go  multilang_test.go
web/: index.html  package-lock.json  package.json  vite.config.ts
workflows/: bug_fix.yaml
(+246 files in other folders)
