[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-sdk"
version = "0.1.0"
description = "Python Worker SDK for the Forge distributed task scheduling engine"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "grpcio>=1.50.0",
    "grpcio-tools>=1.50.0",
    "protobuf>=5.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["forge_sdk*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
